<resources>
    <string name="app_name">Cats</string>
    <string name="administrator_name">Administrator</string>
    <string name="user_name">Username</string>
    <string name="password_name">Password</string>
    <string name="login">Login</string>
    <string name="cat_image">Image</string>
    <string name="cat_name">Name</string>
    <string name="cat_description">Description</string>
    <string name="cat_picture">Picture</string>
    <string name="country_code">Country code</string>
    <string name="temperament">Temperament:</string>
    <string name="wikipedia_url">Wikipedia url:</string>
    <string name="breed_name">Breed:</string>
    <string name="breed_description">Breed description:</string>
    <string name="country">Country:</string>
    <string name="temperament_description">Temperament</string>
    <string name="wikipedia_link">Wikipedia link</string>
    <string name="search_name">Search</string>
    <string name="action_filter">FILTER</string>
    <string name="country_name">Country name</string>
    <string name="button_clear">CLEAR</string>
    <string name="country_all">All</string>
    <string name="country_australia">Australia</string>
    <string name="country_burma">Burma</string>
    <string name="country_canada">Canada</string>
    <string name="country_china">China</string>
    <string name="country_cyprus">Cyprus</string>
    <string name="country_france">France</string>
    <string name="country_greece">Greece</string>
    <string name="country_egypt">Egypt</string>
    <string name="country_isle_of_man">Isle of Man</string>
    <string name="country_iran">Iran (Persia)</string>
    <string name="country_japan">Japan</string>
    <string name="country_norway">Norway</string>
    <string name="country_russia">Russia</string>
    <string name="country_singapore">Singapore</string>
    <string name="country_somalia">Somalia</string>
    <string name="country_thailand">Thailand</string>
    <string name="country_turkey">Turkey</string>
    <string name="country_united_arab_emirates">United Arab Emirates</string>
    <string name="country_united_states">United States</string>
    <string name="country_united_kingdom">United kingdom</string>
    <string name="filter_button">FILTER</string>
</resources>